Weekly statistics count is amended

--- a/FW/MDK-ARM/Watering control/Watering control.build_log.htm
+++ b/FW/MDK-ARM/Watering control/Watering control.build_log.htm
@@ -22,14 +22,14 @@ Dialog DLL:      TCM.DLL V1.56.1.0
  
 <h2>Project:</h2>
 C:\Work\WaterSupplyController\FW\MDK-ARM\Watering control.uvprojx
-Project File Date:  09/08/2022
+Project File Date:  09/26/2022
 
 <h2>Output:</h2>
 *** Using Compiler 'V6.18', folder: 'C:\Keil_v5\ARM\ARMCLANG\Bin'
 Build target 'Watering control'
-compiling main.c...
+compiling backup.c...
 linking...
-Program Size: Code=73826 RO-data=362 RW-data=16 ZI-data=7184  
+Program Size: Code=43346 RO-data=362 RW-data=12 ZI-data=7188  
 FromELF: creating hex file...
 "Watering control\Watering control.axf" - 0 Error(s), 0 Warning(s).
 
