--- a/FW/MDK-ARM/Watering control/Watering control.build_log.htm
+++ b/FW/MDK-ARM/Watering control/Watering control.build_log.htm
@@ -27,6 +27,12 @@ Project File Date:  02/19/2023
 <h2>Output:</h2>
 *** Using Compiler 'V6.18', folder: 'C:\Keil_v5\ARM\ARMCLANG\Bin'
 Build target 'Watering control'
+compiling ds18b20.c...
+compiling onewire.c...
+compiling backup.c...
+compiling stm32f1xx_it.c...
+compiling stm32f1xx_hal_msp.c...
+compiling ring_buffer.c...
 compiling main.c...
 linking...
 Program Size: Code=52198 RO-data=362 RW-data=12 ZI-data=10676  
@@ -55,7 +61,7 @@ Package Vendor: Keil
 
    * Component: ARM::CMSIS:CORE:5.6.0
       Include file:  CMSIS/Core/Include/tz_context.h
-Build Time Elapsed:  00:00:03
+Build Time Elapsed:  00:00:04
 </pre>
 </body>
 </html>
